[MOD] Style changes

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -63,7 +63,7 @@
         android:id="@+id/settings"
         android:layout_width="81dp"
         android:layout_height="68dp"
-        android:backgroundTint="#FF511BB1"
+        android:backgroundTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/scoreboard"
         app:layout_constraintHorizontal_bias="0.878"
@@ -78,7 +78,7 @@
         android:id="@+id/scoreboard"
         android:layout_width="81dp"
         android:layout_height="68dp"
-        android:backgroundTint="#511BB1"
+        android:backgroundTint="@color/primary_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.642"
