--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="grey1">#8c8a85</color>
     <color name="brown1">#4d1c21</color>
     <color name="grey2">#c1b2ab</color>
+    <color name="green">#00FF00</color>
 </resources>
