--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/finding_right_way_success_searching_creative_idea_concept_with_glowing"
+    android:background="@drawable/labyrinth"
     tools:context=".MainActivity">
 
     <TextView
