--- a/app/src/main/res/layout/activity_newgame.xml
+++ b/app/src/main/res/layout/activity_newgame.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.08" />
 
-    <EditText
+    <TextView
         android:id="@+id/number"
         android:layout_width="320dp"
         android:layout_height="98dp"
@@ -64,5 +64,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.217"
-        tools:ignore="LabelFor,SpeakableTextPresentCheck" />
+        tools:ignore="LabelFor,SpeakableTextPresentCheck,TextViewEdits" />
 </androidx.constraintlayout.widget.ConstraintLayout>
