--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.08" />
 
     <Button
-        android:id="@+id/newgame"
+        android:id="@+id/new_game"
         android:layout_width="280dp"
         android:layout_height="95dp"
         android:text="@string/new_game"
@@ -32,7 +32,7 @@
         app:layout_constraintVertical_bias="0.238" />
 
     <Button
-        android:id="@+id/game"
+        android:id="@+id/existed_game"
         android:layout_width="280dp"
         android:layout_height="95dp"
         android:text="@string/play"
@@ -40,6 +40,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newgame"
+        app:layout_constraintTop_toBottomOf="@+id/new_game"
         app:layout_constraintVertical_bias="0.268" />
 </androidx.constraintlayout.widget.ConstraintLayout>
