--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -94,7 +94,7 @@
         app:layout_constraintVertical_bias="0.375" />
 
     <ImageView
-        android:id="@+id/check1"
+        android:id="@+id/checkUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/check"
@@ -109,7 +109,7 @@
         app:tint="@color/black"/>
 
     <ImageView
-        android:id="@+id/check2"
+        android:id="@+id/checkEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/check"
@@ -118,13 +118,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress2"
-        app:layout_constraintTop_toBottomOf="@+id/check1"
+        app:layout_constraintTop_toBottomOf="@+id/checkUsername"
         app:layout_constraintVertical_bias="0.098"
         app:srcCompat="?android:attr/textCheckMark"
         app:tint="@color/black"/>
 
     <ImageView
-        android:id="@+id/check3"
+        android:id="@+id/checkConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/check"
@@ -133,13 +133,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/editTextTextPassword3"
-        app:layout_constraintTop_toBottomOf="@+id/check4"
+        app:layout_constraintTop_toBottomOf="@+id/checkPassword"
         app:layout_constraintVertical_bias="0.137"
         app:srcCompat="?android:attr/textCheckMark"
         app:tint="@color/black"/>
 
     <ImageView
-        android:id="@+id/check4"
+        android:id="@+id/checkPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/check"
@@ -148,7 +148,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toEndOf="@+id/editTextTextPassword2"
-        app:layout_constraintTop_toBottomOf="@+id/check2"
+        app:layout_constraintTop_toBottomOf="@+id/checkEmail"
         app:layout_constraintVertical_bias="0.129"
         app:srcCompat="?android:attr/textCheckMark"
         app:tint="@color/black"/>
