--- a/app/src/main/res/layout/activity_existedgame.xml
+++ b/app/src/main/res/layout/activity_existedgame.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/number2"
+        android:id="@+id/Code_number"
         android:layout_width="320dp"
         android:layout_height="98dp"
         android:autofillHints="number"
@@ -64,6 +64,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/number2" />
+        app:layout_constraintTop_toBottomOf="@+id/Code_number" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
