--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -17,8 +17,8 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="317dp"
-        android:layout_height="131dp"
+        android:layout_width="319dp"
+        android:layout_height="85dp"
         android:text="@string/larble"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -32,20 +32,22 @@
 
     <TextView
         android:id="@+id/username"
-        android:layout_width="202dp"
-        android:layout_height="58dp"
+        android:layout_width="203dp"
+        android:layout_height="48dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.02" />
+        app:layout_constraintVertical_bias="0.193" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="203dp"
         android:layout_height="45dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,11 +60,12 @@
         android:id="@+id/edit_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:contentDescription="@string/change_username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.277"
+        app:layout_constraintVertical_bias="0.363"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <TextView
@@ -70,37 +73,40 @@
         android:layout_width="203dp"
         android:layout_height="46dp"
         android:layout_marginBottom="308dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="0.26" />
+        app:layout_constraintVertical_bias="0.232" />
 
     <TextView
         android:id="@+id/total_games"
         android:layout_width="203dp"
         android:layout_height="46dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wins"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.038" />
 
     <TextView
         android:id="@+id/score"
         android:layout_width="199dp"
         android:layout_height="40dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total_games"
-        app:layout_constraintVertical_bias="0.151" />
+        app:layout_constraintVertical_bias="0.055" />
 
     <Button
         android:id="@+id/edit_password"
@@ -109,7 +115,20 @@
         android:text="@string/change_password"
         app:layout_constraintBottom_toTopOf="@+id/log_out"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/score" />
+        app:layout_constraintTop_toBottomOf="@+id/score"
+        app:layout_constraintVertical_bias="0.638" />
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="88dp"
+        android:layout_height="75dp"
+        app:layout_constraintBottom_toTopOf="@+id/username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:srcCompat="@drawable/account"
+        android:contentDescription="@string/picture" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
