--- a/app/src/main/res/layout/activity_existedgame.xml
+++ b/app/src/main/res/layout/activity_existedgame.xml
@@ -66,4 +66,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Code_number" />
 
+    <TextView
+        android:id="@+id/searching"
+        android:layout_width="237dp"
+        android:layout_height="62dp"
+        android:text="@string/searching_the_game"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Code_number"
+        app:layout_constraintVertical_bias="0.075" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/duck"
+        android:layout_width="147dp"
+        android:layout_height="142dp"
+        android:layout_marginTop="5dp"
+        android:src="@drawable/duck"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searching"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
