--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -9,7 +9,7 @@
         android:id="@+id/log_out"
         android:layout_width="141dp"
         android:layout_height="73dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="28dp"
         android:text="@string/log_out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,75 +38,70 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:layout_constraintVertical_bias="0.193" />
+        app:layout_constraintVertical_bias="0.202" />
 
     <TextView
         android:id="@+id/email"
         android:layout_width="203dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.043" />
 
     <ImageButton
         android:id="@+id/edit_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_width="51dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/change_username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.363"
+        app:layout_constraintVertical_bias="0.357"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <TextView
         android:id="@+id/wins"
         android:layout_width="203dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="308dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_bias="0.232" />
+        app:layout_constraintVertical_bias="0.875" />
 
     <TextView
         android:id="@+id/total_games"
         android:layout_width="203dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wins"
-        app:layout_constraintVertical_bias="0.038" />
+        app:layout_constraintVertical_bias="0.041" />
 
     <TextView
         android:id="@+id/score"
-        android:layout_width="199dp"
-        android:layout_height="40dp"
+        android:layout_width="203dp"
+        android:layout_height="48dp"
         android:textAlignment="center"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/total_games"
-        app:layout_constraintVertical_bias="0.055" />
+        app:layout_constraintVertical_bias="0.064" />
 
     <Button
         android:id="@+id/edit_password"
@@ -124,11 +119,33 @@
         android:id="@+id/picture"
         android:layout_width="88dp"
         android:layout_height="75dp"
+        android:clickable="false"
+        android:contentDescription="@string/picture"
         app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
-        app:srcCompat="@drawable/account"
-        android:contentDescription="@string/picture" />
+        app:layout_constraintVertical_bias="0.542"
+        app:srcCompat="@drawable/account" />
+
+    <TextView
+        android:id="@+id/plus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:clickable="true"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:text="@string/plus"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/picture"
+        app:layout_constraintStart_toStartOf="@+id/picture"
+        app:layout_constraintTop_toTopOf="@+id/picture"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
