--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary_color">#f6c35b</color>
+    <color name="primary_color">#F8A03D</color>
     <color name="yellow2">#fdc029</color>
     <color name="light_blue1">#76d3ee</color>
     <color name="grey1">#8c8a85</color>
