--- a/app/src/main/res/layout/activity_newgame.xml
+++ b/app/src/main/res/layout/activity_newgame.xml
@@ -19,23 +19,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
         app:layout_constraintVertical_bias="0.125" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="317dp"
-        android:layout_height="131dp"
-        android:text="@string/larble"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="60sp"
-        android:textStyle="bold"
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="329dp"
+        android:layout_height="86dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.122"
+        app:srcCompat="@drawable/larblelogo"
+        android:contentDescription="@string/logo" />
 
     <TextView
         android:id="@+id/number"
