--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -4,44 +4,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="317dp"
-        android:layout_height="131dp"
-        android:text="@string/larble"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="60sp"
-        android:textStyle="bold"
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="329dp"
+        android:layout_height="86dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.122"
+        app:srcCompat="@drawable/larblelogo"
+        android:contentDescription="@string/logo" />
 
     <Button
         android:id="@+id/easy"
         android:layout_width="217dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="8dp"
         android:text="@string/easy"
-        app:layout_constraintBottom_toTopOf="@+id/medium"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:layout_constraintVertical_bias="0.209" />
 
     <Button
         android:id="@+id/medium"
         android:layout_width="217dp"
         android:layout_height="78dp"
-        android:layout_marginBottom="8dp"
         android:text="@string/medium"
-        app:layout_constraintBottom_toTopOf="@+id/hard"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.891" />
+        app:layout_constraintTop_toBottomOf="@+id/easy"
+        app:layout_constraintVertical_bias="0.094" />
 
     <Button
         android:id="@+id/hard"
@@ -51,7 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.649" />
+        app:layout_constraintTop_toBottomOf="@+id/medium"
+        app:layout_constraintVertical_bias="0.154" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
