--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -7,41 +7,43 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="329dp"
-        android:layout_height="86dp"
+        android:layout_width="463dp"
+        android:layout_height="160dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.079"
-        app:srcCompat="@drawable/larblelogo"
-        android:contentDescription="@string/logo" />
+        app:layout_constraintVertical_bias="0.061"
+        app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/photo"
-        android:layout_width="97dp"
-        android:layout_height="103dp"
+        android:layout_width="93dp"
+        android:layout_height="85dp"
         android:layout_margin="10dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView11"
-        app:layout_constraintVertical_bias="0.018"
+        app:layout_constraintVertical_bias="0.0"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
         app:srcCompat="@drawable/account" />
 
     <Button
         android:id="@+id/log_out"
-        android:layout_width="141dp"
-        android:layout_height="73dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="136dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/log_out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_password"
+        app:layout_constraintVertical_bias="0.322" />
 
     <TextView
         android:id="@+id/username"
@@ -76,7 +78,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.357"
+        app:layout_constraintVertical_bias="0.436"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <TextView
@@ -121,17 +123,17 @@
         android:layout_width="136dp"
         android:layout_height="69dp"
         android:text="@string/change_password"
-        app:layout_constraintBottom_toTopOf="@+id/log_out"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score"
-        app:layout_constraintVertical_bias="0.638" />
+        app:layout_constraintVertical_bias="0.064" />
 
     <TextView
         android:id="@+id/plus"
         android:layout_width="54dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:clickable="true"
         android:focusable="true"
         android:minWidth="48dp"
@@ -144,7 +146,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/photo"
         app:layout_constraintEnd_toEndOf="@+id/photo"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/photo"
         app:layout_constraintTop_toTopOf="@+id/photo"
         app:layout_constraintVertical_bias="1.0" />
