--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="329dp"
-        android:layout_height="86dp"
+        android:layout_width="463dp"
+        android:layout_height="160dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122"
-        app:srcCompat="@drawable/larblelogo"
-        android:contentDescription="@string/logo" />
+        app:layout_constraintVertical_bias="0.066"
+        app:srcCompat="@drawable/logo" />
 
     <Button
         android:id="@+id/multiplayer"
@@ -46,7 +46,6 @@
         android:id="@+id/name"
         android:layout_width="243dp"
         android:layout_height="70dp"
-        android:layout_marginTop="111dp"
         android:text=""
         android:textAlignment="center"
         android:textColor="#000000"
@@ -56,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.009" />
+        app:layout_constraintVertical_bias="0.06" />
 
     <ImageButton
         android:id="@+id/settings"
