--- a/app/src/main/res/layout/activity_singleplayer.xml
+++ b/app/src/main/res/layout/activity_singleplayer.xml
@@ -6,15 +6,15 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="329dp"
-        android:layout_height="86dp"
+        android:layout_width="463dp"
+        android:layout_height="160dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.122"
-        app:srcCompat="@drawable/larblelogo"
-        android:contentDescription="@string/logo" />
+        app:layout_constraintVertical_bias="0.068"
+        app:srcCompat="@drawable/logo" />
 
     <Button
         android:id="@+id/easy"
@@ -25,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView10"
-        app:layout_constraintVertical_bias="0.209" />
+        app:layout_constraintVertical_bias="0.14" />
 
     <Button
         android:id="@+id/medium"
