[EDIT] change color second ball

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow2">#fdc029</color>
     <color name="light_blue1">#76d3ee</color>
     <color name="grey1">#8c8a85</color>
+    <color name="red">#ea0b0b</color>
 </resources>
